; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_moniker.c_create_stream_on_mip_ro.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_moniker.c_create_stream_on_mip_ro.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32**)* @create_stream_on_mip_ro to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_stream_on_mip_ro(%struct.TYPE_3__* %0, i32** %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32** %1, i32*** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @GlobalAlloc(i32 0, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i8* @GlobalLock(i32 %11)
  store i8* %12, i8** %6, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @memcpy(i8* %13, i32 %16, i32 %19)
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @GlobalUnlock(i32 %21)
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @TRUE, align 4
  %25 = load i32**, i32*** %4, align 8
  %26 = call i32 @CreateStreamOnHGlobal(i32 %23, i32 %24, i32** %25)
  ret i32 %26
}

declare dso_local i32 @GlobalAlloc(i32, i32) #1

declare dso_local i8* @GlobalLock(i32) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1

declare dso_local i32 @GlobalUnlock(i32) #1

declare dso_local i32 @CreateStreamOnHGlobal(i32, i32, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
